--- a/style.css
+++ b/style.css
@@ -18,23 +18,66 @@ body {
     margin: auto;
 }
 
+.container2 {
+    color: #fff;
+    text-align: start;
+}
+
 /* Header */
 header {
     background-color: #222;
     color: white;
-    padding: 20px 0;
+    padding: 10px 0;
 }
 
 header h1 {
     font-size: 2.5rem;
-    margin-bottom: 5px;
+    margin-left: 10px;
 }
 
 header p {
     font-size: 1.2rem;
-    opacity: 0.8;
+    opacity: 0.7;
+    margin-left: 10px;
 }
 
+.ullist {
+    display: flex;
+}
+
+.ullist li {
+    margin-left: 5px;
+}
+
+.myheader {
+    display: flex;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+}
+
+
+.myheader div ul {
+    list-style: none;
+    margin-top: 15px;
+    margin-right: 10px;
+}
+
+.myheaderabout {
+    text-decoration: none;
+    display: inline-block;
+    background: #ff6b6b;
+    padding: 8px 15px;
+    border-radius: 6px;
+    font-size: 1.1rem;
+    color: white;
+    text-decoration: none;
+    transition: 0.3s ease-in-out;
+
+}
+
+/* 
 /* Hero Section */
 .hero {
     background: url('1.jpg') no-repeat center center/cover;
@@ -87,6 +130,7 @@ header p {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
+    margin-bottom: 10px;
 }
 
 .project-card {
